# sonus

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  License.txt  ReadMe.md  _config.yml  package-info.json.in
docs/: sonus.8bitinv~.maxref.xml  sonus.acti.maxref.xml  sonus.acti~.maxref.xml  sonus.addosc~.maxref.xml  sonus.biquads~.maxref.xml  sonus.bitinv~.maxref.xml  sonus.bitman~.maxref.xml  sonus.blist.maxref.xml  sonus.bozo.maxref.xml  sonus.buffx.maxref.xml  sonus.bufsnap.maxref.xml  sonus.bytebeat~.maxref.xml  sonus.byteplay~.maxref.xml  sonus.ca.maxref.xml  sonus.cheby~.maxref.xml  sonus.chialvo.maxref.xml  sonus.collatz~.maxref.xml  sonus.crossloop~.maxref.xml  sonus.cryptoverb~.maxref.xml  sonus.dnn.maxref.xml  sonus.ecaosc~.maxref.xml  sonus.edist.maxref.xml  sonus.fselector~.maxref.xml  sonus.ftomel.maxref.xml  sonus.ga.maxref.xml  sonus.ga.num.maxref.xml  sonus.halaphon~.maxref.xml  sonus.harmosc~.maxref.xml  sonus.hop.maxref.xml  sonus.informer.spec~.maxref.xml  sonus.linden.maxref.xml  sonus.lline.maxref.xml  sonus.logistic.maxref.xml  sonus.lorenz~.maxref.xml  sonus.lrandom.maxref.xml  sonus.lurn.maxref.xml  sonus.mathc.maxref.xml  sonus.mbox.maxref.xml  sonus.meltof.maxref.xml  sonus.mima~.maxref.xml  (+21 more)
extras/: ai.maxpat  effects.maxpat  generators.maxpat  live.maxpat  math.maxpat  sonus Overview.maxpat
help/: ai.maxpat  effects.maxpat  example.json  generators.maxpat  live.maxpat  math.maxpat  sample.wav.reapeaks  sonus.8bitinv~.maxhelp  sonus.acti.maxhelp  sonus.acti~.maxhelp  sonus.addosc~.maxhelp  sonus.biquads~.maxhelp  sonus.bitinv~.maxhelp  sonus.bitman~.maxhelp  sonus.blist.maxhelp  sonus.bozo.maxhelp  sonus.buffx.maxhelp  sonus.bufsnap.maxhelp  sonus.bytebeat~.maxhelp  sonus.byteplay~.maxhelp  sonus.ca.maxhelp  sonus.cheby~.maxhelp  sonus.collatz~.maxhelp  sonus.crossloop~.maxhelp  sonus.cryptoverb~.maxhelp  sonus.dnn.maxhelp  sonus.ecaosc~.maxhelp  sonus.edist.maxhelp  sonus.fselector~.maxhelp  sonus.ftomel.maxhelp  sonus.ga.maxhelp  sonus.ga.num.maxhelp  sonus.halaphon~.maxhelp  sonus.harmosc~.maxhelp  sonus.hop.maxhelp  sonus.linden.maxhelp  sonus.lline.maxhelp  sonus.logistic.maxhelp  (+28 more)
source/projects/sonus.mbox/: CMakeLists.txt  sonus.mbox.cpp
source/projects/sonus.wtp/: CMakeLists.txt  sonus.wtp.cpp
(+106 files in other folders)
